# UIUC-Cloud-Computing

./: README.md
Part1/Cloud-wwek1/Cloud-wwek1/: main.cpp
Part1/Cloud-wwek1/Cloud-wwek1.xcodeproj/: project.pbxproj
Part1/Cloud-wwek1/Cloud-wwek1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Part1/Cloud-wwek1/Cloud-wwek1.xcodeproj/project.xcworkspace/xcuserdata/Gideon.xcuserdatad/: UserInterfaceState.xcuserstate
Part1/Cloud-wwek1/Cloud-wwek1.xcodeproj/xcuserdata/Gideon.xcuserdatad/xcschemes/: Cloud-wwek1.xcscheme  xcschememanagement.plist
Part1/mp1/: Application  CMakeLists.txt  MP1Node.cpp  MP1Node.h  Params.cpp
Part1/week1/: notes.md
Part1/week1/mp1/: Application
Part1/week2/: notes.md
Part1/week3/: notes.md
Part1/week4/: notes.md
Part1/week5/: notes.md
Part2/mp2_assignment/: Application  MP1Node.cpp  MP1Node.h  MP2Node.cpp  MP2Node.h
Part2/week1/: notes.md
Part2/week2/: notes.md
Part2/week3/: notes.md
Part2/week4/: notes.md
Part2/week5/: notes.md
Part3/week1/: notes.md
Part3/week2/: notes.md
Part5/cloudnetmooc/minidc/: config.txt
Part5/cloudnetmooc/minidc/controller/: bwmon.py  policy.py
Part5/cloudnetmooc/minidc/dashboard/: tenantplot.json
Part5/week1/: notes.md
Part5/week3/: notes.md
